--- a/angular.json
+++ b/angular.json
@@ -68,13 +68,16 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "coding-exercise:build:build",
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "coding-exercise:build:production"
             },
             "development": {
-              "browserTarget": "coding-exercise:build:development",
-              "proxyConfig": "src/proxy.config.js"
+              "browserTarget": "coding-exercise:build:development"
             }
           },
           "defaultConfiguration": "development"
